---------------------------------------------------------------------------------------------------
Version: 1.5.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 2025-06-22
  Changes:
    - Use native quality rendering
    - Add virtual signals for inventory information (thanks @fctrusr for a PR!)
---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: 2025-03-15
  Changes:
    - Add rocket progress signals
---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 2025-02-22
  Bugfixes:
    - Allow blueprinting when selecting contents for an existing blueprint
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2025-02-04
  Changes:
    - Maintain configuration across undo/redo
    - Move scan_range and scan_offset to startup settings
---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: 2025-02-03
  Bugfixes:
    - Fix crash when trying to migrate old inventory sensors without the mod being present.
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2025-01-30
  Bugfixes:
    - do not require the entities again; the make_4way_animation_from_spritesheet function is
      global and it wreaks havoc with mods that modify the base entities (in this case Better Roboports)
      reported (and insisted upon) by @Hoochie on the mod forums. Thank you.
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2025-01-29
  Changes:
    - Support migration from all older Inventory sensor versions