@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.1
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fix a crash with fluid wagons if inventory signals are active
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.0
 Date: 2025-06-22
